<resources>
    <string name="app_name">Contacts</string>
    <string name="contact_name_hint">Name</string>
    <string name="contact_phone_hint">Phone</string>
    <string name="search_hint">Search</string>

    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_search">Search</string>

    <string name="you_have_no_contacts_yet">You have no contacts yet</string>
    <string name="no_results">No results</string>
    <string name="retry">Retry</string>
    <string name="database_error_header">Database error</string>
    <string name="database_connection_error">Can\'t connect to database</string>
    <string name="delete_item_message">Are you sure you want to delete this contact?</string>
    <string name="delete_item_header">Delete contact</string>

    <string name="fragment_contacts_title">Contacts</string>
    <string name="fragment_add_contact_title">Add contact</string>
    <string name="fragment_edit_contact_title">Edit contact</string>

    <string name="phone_type_mobile">Mobile</string>
    <string name="phone_type_work">Work</string>
    <string name="phone_type_home">Home</string>
</resources>
