<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/selectableItemBackground">

    <LinearLayout
        android:id="@+id/layout_item"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small">

        <TextView
            android:id="@+id/text_name"
            android:text="@string/contact_name_hint"
            android:textSize="@dimen/font_header"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_phone"
                android:text="@string/contact_phone_hint"
                android:textSize="@dimen/font_text"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_phone_type"
                android:text="@string/phone_type_mobile"
                android:textSize="@dimen/font_text_small"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_small"
                android:layout_marginStart="@dimen/padding_small"
                android:layout_gravity="bottom"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>